[metadata]
name = zhangbiao-auth
version = 1.0.0
description = zhangbiao auth toolset
license = Lenovo
keywords = hpc, zhangbiao, auth
classifiers =
	Development Status :: 2 - Pre-Alpha
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test = pytest

[bdist_wheel]
universal=1

[tool:pytest]
addopts = --cov
norecursedirs = dist build .tox
testpaths = tests/

[isort]
line-width = 78
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = lico
multi_line_output = 5
not_skip = __init__.py
