[metadata]
name = zhangbiao
version = 1.0.0
description = zhang biao
license = Lenovo
keywords = hpc, lico
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test = pytest

[tool:pytest]
addopts = --cov
norecursedirs = dist build .tox
testpaths = tests/

[flake8]
show-source = true

[isort]
line-width = 78
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = lico
multi_line_output = 5
not_skip = __init__.py

